# VMem-Cache-Sim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CompArch_CacheCalculation.c  Makefile  README.md  flake.nix  treefmt.nix
.github/workflows/: build.yml  check.yml
docs/: Report-Template.docx
src/: CommandLineParsing.c  CompArch_CacheCalculation.c  main.c  output.c  physmemcalc.c
src/cachecalculator/: cachecalculator.c  cachecalculator.h
src/cachesim/: cachesim.c  cachesim.h
src/cmdline/: parser.c  parser.h
src/instructions/: address.c  address.h  inst.c  inst.h  reader.c  reader.h
src/integration/: integration.c  integration.h
src/lib/fmtstr/: fmtstr.c  fmtstr.h
src/lib/helpers/: helpers.c  helpers.h
src/lib/types/: cache.h  physicalmemory.h  replacementpolicy.c  types.h  virtualMemory.h
src/memory management/: memorymanagement.c
src/memorymanagement/: memorymanagement.c  memorymanagement.h
src/output/: output.c  output.h
src/performance/: performance.c  performance.h
src/physmemcalc/: physmemcalc.c  physmemcalc.h
src/tracefile/: reader.c  reader.h
src/virtmemresults/: virtMemResults.c  virtMemResults.h
traces/Traces-for-Debugging/: TestTrace.trc  TinyTrace.trc  Trace1half.trc
